--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,12 +1,1 @@
-.container.micropost-container
-  %h1 Form
-  -# = form_with(model: @micropost, url: microposts_path, local: true) do |form|
-    = render 'shared/error_messages', object: form.object
-    .form-group
-      = form.number_field :time, class: 'form-control', placeholder: "時間（分）を入力してください"
-    .form-group
-      = form.text_area :memo, class: 'form-control', placeholder: "メモを加えてください"
-    .form-group
-      = form.file_field :picture
-    .form-group
-      = form.submit "記録する", class: 'btn btn-info btn-lg form-submit'
+.home_all
