--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,4 +1,4 @@
-.home_all {
-  height: 100vh;
-  background-color: navy;
-}
+// .home_all {
+//   height: 100vh;
+//   background-color: navy;
+// }
