--- a/app/assets/stylesheets/_devise.scss
+++ b/app/assets/stylesheets/_devise.scss
@@ -1,45 +1,45 @@
-// .Account {
-//   min-height: 100vh;
-//   width: 100vw;
-//   background-image: url(IMG_1008.jpeg);
-//   background-size: 100% 100%;
-//   background-position: center center;
-//   align-items: center;
-//   display: flex;
-//   flex-direction: column;
-//   .Account_box {
-//     height: auto;
-//     margin-top: 170px;
-//     .Account_title {
-//       font-size: 70px;
-//       h2 {
-//         text-align: center;
-//         color: white;
-//         opacity: 0.8;
-//         text-shadow: 0 0 7px rgba(0,0,0,0.4);
-//       }
-//     }
-//     .Account_field {
-//       text-align: center;
-//       font-size: 20px;
-//       .field_child {
-//         height: 30px;
-//         width: 300px;
-//         font-size: 16px;
-//         padding: 10px 16px 8px;
-//         border: 1px solid #ccc;
-//         border-radius: 4px;
-//         background-color: rgba(245, 245, 245, 0.3);
-//       }
-//       .sign__btn {
-//         margin: 50px 0 24px;
-//         background-color: rgba(245, 245, 245, 0.3);
-//         border: none;
-//         font-size: 14px;
-//         color: #fff;
-//         height: 50px;
-//         width: 300px;
-//       }
-//     }
-//   }
-// }
+.Account {
+  min-height: 100vh;
+  width: 100vw;
+  background-image: url(IMG_1008.jpeg);
+  background-size: 100% 100%;
+  background-position: center center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  .Account_box {
+    height: auto;
+    margin-top: 170px;
+    .Account_title {
+      font-size: 70px;
+      h2 {
+        text-align: center;
+        color: white;
+        opacity: 0.8;
+        text-shadow: 0 0 7px rgba(0,0,0,0.4);
+      }
+    }
+    .Account_field {
+      text-align: center;
+      font-size: 20px;
+      .field_child {
+        height: 30px;
+        width: 300px;
+        font-size: 16px;
+        padding: 10px 16px 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        background-color: rgba(245, 245, 245, 0.3);
+      }
+      .sign__btn {
+        margin: 50px 0 24px;
+        background-color: rgba(245, 245, 245, 0.3);
+        border: none;
+        font-size: 14px;
+        color: #fff;
+        height: 50px;
+        width: 300px;
+      }
+    }
+  }
+}
