--- a/app/assets/stylesheets/habit.scss
+++ b/app/assets/stylesheets/habit.scss
@@ -1,30 +1,30 @@
-// .wrapper {
-//   box-sizing: border-box;
-//   width: 100%;
+.wrapper {
+  box-sizing: border-box;
+  width: 100%;
 
-//   .header {
-//     height: 100px;
-//     width: 100%;
-//     background-color: white;
-//     margin: 0 auto;
+  .header {
+    height: 100px;
+    width: 100%;
+    background-color: white;
+    margin: 0 auto;
 
-//     .home_header {
-//       background-color: #000088;
-//       .home_title {
-//         font-size: 50px;
-//         color: yellow;
+    .home_header {
+      background-color: #000088;
+      .home_title {
+        font-size: 50px;
+        color: yellow;
 
-//         .home_btn {
-//           display: flex;
-//           justify-content: space-between;
-//           margin: 10px auto 0 auto;
-//           width: 1000px;
+        .home_btn {
+          display: flex;
+          justify-content: space-between;
+          margin: 10px auto 0 auto;
+          width: 1000px;
 
-//           .page {
-//             text-decoration: none;
-//             color: red;
-//             font-size: 15px;
-//           }
+          .page {
+            text-decoration: none;
+            color: red;
+            font-size: 15px;
+          }
 
           
         }
